--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: alexeylesin
 description: Блог Алексея Лесина
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/47789168?s=400&u=cfc4cd45ad1275eebcb1fc699d495fb102bf4acf&v=4
 
 #
 # Flags below are optional
